# libcsp-freertos

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  main.c  meson.build
.github/workflows/: build-meson.yaml
src/: hooks.c
